[gd_scene load_steps=19 format=2]

[ext_resource path="res://GameFlow/DialogueDisplayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/textures/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Node/Node.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameFlow/Tutorials/ThirdTutorial/CodeBlockSrc/ThirdTutorialCodBlock.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameFlow/Tutorials/SecondTutorial/NewUNodeIsNotAStar.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameFlow/Tutorials/ThirdTutorial/third_tutorial.gd" type="Script" id=21]
[ext_resource path="res://GameFlow/Tutorials/ThirdTutorial/CodeBlockSrc/third_tutorial_show_ADTs.gd" type="Script" id=22]
[ext_resource path="res://Assets/textures/red_pandas/PandaRescuePixel.jpg" type="Texture" id=23]
[ext_resource path="res://GameFlow/Tutorials/ThirdTutorial/StackQueue.png" type="Texture" id=25]
[ext_resource path="res://AlgorithmScenes/Screen/ADT/Queue/QueueAnimation.tscn" type="PackedScene" id=26]
[ext_resource path="res://AlgorithmScenes/Screen/ADT/Stack/StackAnimation.tscn" type="PackedScene" id=27]

[sub_resource type="Animation" id=47]
resource_name = "FinishDialogue"
tracks/0/type = "value"
tracks/0/path = NodePath("DialogueCanvas/DialogueDisplayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialogueCanvas/DialogueDisplayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUD/Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUD/QueueAnimation:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "LoseAnimation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Nodes:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "OnReady"
tracks/0/type = "value"
tracks/0/path = NodePath("Nodes:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/Background:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=45]
resource_name = "ShowQueue"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/QueueAnimation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/StackAnimation:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUD/StackAnimation:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("HUD/StackAnimation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_animation"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HUD/QueueAnimation:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("HUD/QueueAnimation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HUD/StackQueue:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=44]
resource_name = "ShowStack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/StackQueue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/StackQueue:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUD/StackAnimation:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUD/StackAnimation:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("HUD/StackAnimation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_animation"
} ]
}

[sub_resource type="Animation" id=33]
resource_name = "WinAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("WinAnimationCanvas/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinAnimationCanvas/TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Curve2D" id=46]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -8.40001, 70.4, 0, 0, 0, 0, -1.40001, 76.2, 0, 0, 0, 0, 16.4, 77, 0, 0, 0, 0, 34.4, 76 )
}

[node name="ThirdTutorialNode" type="Node2D"]
script = ExtResource( 21 )

[node name="TimerToLose" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="DialogueCanvas" type="CanvasLayer" parent="."]
layer = 100

[node name="DialogueDisplayer" parent="DialogueCanvas" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -268.0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_editor_description_": ""
}
dialogues_to_show = [ "You are doing very well!
The next galaxy will be the hard one, so I need you to be ready.", "You need to use Stacks and Queues.
Both are like Lists. They can contain nodes.", "{fade_stack_queue_and_show_stack}
This is a stack. You put, A and B in that order.
You pop one element. This will be B, because the last that came in, is the first to come out. Last In, First Out.", "{show_queue_animation}
This is a queue. You put  A and B in that order.
You pop one element. This will be A, because the first that came in, is the first to come out. First In, First Out.", "Go on and save the pandas!" ]
command_methods_script = ExtResource( 22 )
should_close_on_finish = false

[node name="Nodes" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 2, 534 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="GraphNode0" parent="Nodes" instance=ExtResource( 3 )]
position = Vector2( 404, 222 )

[node name="GraphNode1" parent="Nodes" instance=ExtResource( 3 )]
position = Vector2( 323, 473 )
index = 1

[node name="GraphNode2" parent="Nodes" instance=ExtResource( 3 )]
position = Vector2( 752, 574 )
index = 2

[node name="GraphNode3" parent="Nodes" instance=ExtResource( 3 )]
position = Vector2( 1028, 316 )
index = 3

[node name="GraphNode4" parent="Nodes" instance=ExtResource( 3 )]
position = Vector2( 824, 126 )
index = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/FinishDialogue = SubResource( 47 )
anims/LoseAnimation = SubResource( 43 )
anims/OnReady = SubResource( 35 )
anims/ShowQueue = SubResource( 45 )
anims/ShowStack = SubResource( 44 )
anims/WinAnimation = SubResource( 33 )

[node name="WinAnimationCanvas" type="CanvasLayer" parent="."]
layer = 20

[node name="TextureRect" type="TextureRect" parent="WinAnimationCanvas"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_right = -450.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 1164, 1161 )
mouse_filter = 2
texture = ExtResource( 23 )
expand = true

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="CodeBlock" parent="HUD" instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -511.0
margin_top = 10.0
margin_right = -14.0
margin_bottom = 811.0

[node name="UNodeIsNotAStarPopup" parent="HUD" instance=ExtResource( 7 )]
margin_left = 499.0
margin_top = 249.0
margin_right = 1079.0
margin_bottom = 381.0

[node name="Background" type="ColorRect" parent="HUD"]
margin_right = 1920.0
margin_bottom = 819.0

[node name="StackQueue" type="Sprite" parent="HUD"]
position = Vector2( 963.5, 411 )
scale = Vector2( 0.914436, 0.879386 )
texture = ExtResource( 25 )

[node name="StackAnimation" parent="HUD" instance=ExtResource( 27 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 780, 200 )
scale = Vector2( 5, 5 )

[node name="QueueAnimation" parent="HUD" instance=ExtResource( 26 )]
visible = false
position = Vector2( 780, 175 )
scale = Vector2( 5, 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="PathOut" parent="HUD/QueueAnimation" index="4"]
curve = SubResource( 46 )

[node name="PathFollowOut" parent="HUD/QueueAnimation/PathOut" index="0"]
position = Vector2( -8.40001, 70.4 )

[editable path="HUD/QueueAnimation"]
